--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint:prettier": "prettier --write \"{src,tests,types}/**/*.{vue,js,jsx,ts,tsx,json,css,less,scss,html,md}\"",
     "lint": "pnpm lint:eslint && pnpm lint:prettier",
     "prepare": "husky install",
-    "test": "vitest"
+    "test": "vitest",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@element-plus/icons-vue": "2.3.1",
@@ -40,8 +41,6 @@
     "screenfull": "6.0.2",
     "vue": "3.4.21",
     "vue-router": "4.3.0",
-    "vxe-table": "4.5.21",
-    "vxe-table-plugin-element": "4.0.1",
     "xe-utils": "3.5.22"
   },
   "devDependencies": {
