--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pinia": "2.1.7",
     "screenfull": "6.0.2",
     "vue": "3.4.21",
+    "vue-i18n": "^9.13.1",
     "vue-router": "4.3.0",
     "xe-utils": "3.5.22"
   },
